# sphinx_pyproject_poetry

./: .gitignore  .gitmodules  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  sphinx_pyproject_poetry.html
docs/: Makefile
docs/source/: conf.py  index.rst  sphinx_pyproject_poetry.rst
sphinx_pyproject_poetry/: __init__.py
tests/: test_sphinx_pyproject_poetry.py
tests/tomls/: noauthor.toml  noname.toml
